--- a/mybookstore/package.json
+++ b/mybookstore/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
     "firebase": "^10.4.0",
+    "framer-motion": "^12.5.0",
     "i18next": "^23.6.0",
     "i18next-xhr-backend": "^3.2.2",
+    "lucide-react": "^0.483.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
