--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "crypto-js": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
+    "framer-motion": "^12.5.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.483.0",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6"
